--- a/pm_logconv.conf
+++ b/pm_logconv.conf
@@ -12,9 +12,9 @@
 #hostcache_path = /var/lib/heartbeat/hostcache
 #syslogformat = True
 #reset_interval = 60
-#attribute_pingd = default_ping_set, lt, 100
-#attribute_diskd = diskcheck_status, eq, ERROR
-#attribute_diskd_inner = diskcheck_status_internal, eq, ERROR
+#attribute_pingd = not_defined default_ping_set or default_ping_set lt 100
+#attribute_diskd = not_defined diskcheck_status or diskcheck_status eq ERROR
+#attribute_diskd_inner = not_defined diskcheck_status_internal or diskcheck_status_internal eq ERROR
 #logconv_logfacility = daemon
 #act_rsc = prmExPostgreSQLDB, prmApPostgreSQLDB
 
