--- a/pm_logconv.spec.in
+++ b/pm_logconv.spec.in
@@ -3,8 +3,8 @@
 ########################################
 %define name pm_logconv
 %define cluster hb
-%define version 1.0
-%define release 1.el5
+%define version 1.1
+%define release 1.el@RHEL_VER@
 %define prefix /usr
 %define instdir pm_logconv
 %define ORGARCH %{name}-%{version}
