--- a/pm_logconv.conf
+++ b/pm_logconv.conf
@@ -22,39 +22,47 @@
 ###
 # For Resource event.
 ###
-#MsgNo.1-1, 2-1, 4-1, 5-1, 17-1, 18-1
+#MsgNo.1-1, 2-1, 4-1, 5-1, 11-1, 12-1, 17-1, 18-1
 [Resource tries to operation]
 pattern_start=crmd,info:,do_lrm_rsc_op: Performing key,op,start
 pattern_stop=crmd,info:,do_lrm_rsc_op: Performing key,op,stop
 pattern_promote=crmd,info:,do_lrm_rsc_op:,Performing key, op,promote
 pattern_demote=crmd,info:,do_lrm_rsc_op:,Performing key,op,demote
+pattern_migrate_to=crmd,info:,do_lrm_rsc_op:,Performing key,op,migrate_to
+pattern_migrate_from=crmd,info:,do_lrm_rsc_op:,Performing key,op,migrate_from
 func=try_to_operate
 
-#MsgNo.1-2, 2-2, 4-2, 5-2, 17-2, 18-2
+#MsgNo.1-2, 2-2, 4-2, 5-2, 11-2, 12-2, 17-2, 18-2
 [Resource operation succeeded]
 pattern_start=crmd,info:,process_lrm_event:,LRM operation,start,rc=0,!status=,ok
 pattern_stop=crmd,info:,process_lrm_event:,LRM operation,stop,rc=0,!status=,ok
 pattern_promote=crmd,info:,process_lrm_event,LRM operation,promote,rc=0,!status=,ok
 pattern_demote=crmd,info:,process_lrm_event,LRM operation,demote,rc=0,!status=,ok
+pattern_migrate_to=crmd,info:,process_lrm_event,LRM operation,migrate_to,rc=0,!status=,ok
+pattern_migrate_from=crmd,info:,process_lrm_event,LRM operation,migrate_from,rc=0,!status=,ok
 func=operation_succeeded
 
-#MsgNo.1-3, 2-3, 3-1, 4-3, 5-3, 17-3, 19-1
+#MsgNo.1-3, 2-3, 3-1, 4-3, 5-3, 11-3, 12-3, 17-3, 19-1
 [Resource operation failed]
 pattern_start=crmd,info:,process_lrm_event:,LRM operation,start,!rc=0,!status=
 pattern_stop=crmd,info:,process_lrm_event:,LRM operation,stop,!rc=0,!status=
 pattern_monitor=crmd,info:,process_lrm_event:,LRM operation,monitor,!monitor_0,!rc=0,!rc=8,!rc=7,!status=
 pattern_promote=crmd,info:,process_lrm_event:,LRM operation,promote,!rc=0,!status=
 pattern_demote=crmd,info:,process_lrm_event:,LRM operation,demote,!rc=0,!status=
+pattern_migrate_to=crmd,info:,process_lrm_event:,LRM operation,migrate_to,!rc=0,!status=
+pattern_migrate_from=crmd,info:,process_lrm_event:,LRM operation,migrate_from,!rc=0,!status=
 func=operation_failed
 loglevel=ERROR
 
-#MsgNo.1-4, 2-4, 3-3, 4-4, 5-4
+#MsgNo.1-4, 2-4, 3-3, 4-4, 5-4, 11-4, 12-4
 [OCF resource operation timedout]
 pattern_start=crmd,ERROR:,process_lrm_event:,LRM operation,start,!status=,Timed Out
 pattern_stop=crmd,ERROR:,process_lrm_event:,LRM operation,stop,!status=,Timed Out
 pattern_monitor=crmd,ERROR:,process_lrm_event:,LRM operation,monitor,!monitor_0,!status=,Timed Out
 pattern_promote=crmd,ERROR:,process_lrm_event,LRM operation,promote,!status=,Timed Out
 pattern_demote=crmd,ERROR:,process_lrm_event,LRM operation,demote,!status=,Timed Out
+pattern_migrate_to=crmd,ERROR:,process_lrm_event,LRM operation,migrate_to,!status=,Timed Out
+pattern_migrate_from=crmd,ERROR:,process_lrm_event,LRM operation,migrate_from,!status=,Timed Out
 func=operation_timedout_ocf
 
 #MsgNo.3-2, 19-2
