Fixed the processing nodes added to the shutdown list.

--- a/pm_logconv.conf
+++ b/pm_logconv.conf
@@ -258,6 +258,11 @@ func=detect_dc_shutdown_request
 pattern=crmd,info:,do_shutdown_req: Sending shutdown request to DC:
 func=detect_send_shutdown
 
+#Msg No.14-6
+[Node status shutting down.]
+pattern=pengine,info:,determine_online_status: Node,is shutting down
+func=detect_node_shutting_down
+
 ###
 # For logging daemon event.
 ###
