Improvement to the processing to judge fail-over, when cluster stops.

--- a/pm_logconv.conf
+++ b/pm_logconv.conf
@@ -163,7 +163,8 @@ loglevel=WARN
 
 #MsgNo.F0-2, F12-1, F12-2
 [FailOver complete]
-pattern=crmd,info:,do_state_transition:,State transition,-> S_IDLE
+pattern_idle=crmd,info:,do_state_transition:,State transition,-> S_IDLE
+pattern_stopping=crmd,info:,do_state_transition:,State transition,-> S_STOPPING
 func=detect_fo_complete
 loglevel=WARN
 
@@ -252,16 +253,6 @@ func=detect_pcmk_shutting_down
 [DC node want to shutdown]
 pattern=cib,info:,cib_process_shutdown_req:,Shutdown REQ from
 func=detect_dc_shutdown_request
-
-#Msg No.14-5
-[Send shutdown request to DC.]
-pattern=crmd,info:,do_shutdown_req: Sending shutdown request to DC:
-func=detect_send_shutdown
-
-#Msg No.14-6
-[Node status shutting down.]
-pattern=pengine,info:,determine_online_status: Node,is shutting down
-func=detect_node_shutting_down
 
 ###
 # For logging daemon event.
