Deal with change of Pacemaker log format(PM-1.0 changeset:2c86e0004702).

--- a/pm_logconv.conf
+++ b/pm_logconv.conf
@@ -190,14 +190,14 @@ func=add_rsc_start
 #MsgNo.F11-2
 #The message is not output immediately, output when F/O is complete.
 [Add Resource stop action]
-pattern=pengine,notice:,LogActions: Stop resource
+pattern=pengine,notice:,LogActions: Stop,resource
 func=add_rsc_stop
 
 #MsgNo.F11-3, F11-8, F11-9
 #The message is not output immediately, output when F/O is complete.
 [Add no action]
-pattern_leave_start=pengine,notice:,LogActions: Leave resource
-pattern_restart=pengine,notice:,LogActions: Restart resource
+pattern_leave_start=pengine,notice:,LogActions: Leave,resource
+pattern_restart=pengine,notice:,LogActions: Restart,resource
 func=add_no_action
 
 #MsgNo.F11-4
@@ -215,7 +215,7 @@ func=detect_rsc_unmanaged
 #MsgNo.F11-6
 #The message is not output immediately, output when F/O is complete.
 [Add Resource move action]
-pattern=pengine,notice:,LogActions: Move resource
+pattern=pengine,notice:,LogActions: Move,resource
 func=add_rsc_move
 
 ###
