Support to Pacemaker-1.0.12, and improvement to the processing to judge fail-over.

--- a/pm_logconv.conf
+++ b/pm_logconv.conf
@@ -9,6 +9,7 @@
 [Settings]
 #ha_log_path = /var/log/ha-log
 #output_path = /var/log/pm_logconv.out
+#hacf_path = /etc/ha.d/ha.cf
 #hostcache_path = /var/lib/heartbeat/hostcache
 #syslogformat = True
 #reset_interval = 60
@@ -80,6 +81,11 @@ loglevel=ERROR
 pattern_dead=crmd,notice:,crmd_ha_status_callback:,Status update:,Node,now has status,dead
 pattern_active=crmd,notice:,crmd_ha_status_callback:,Status update:,Node,now has status,active
 func=node_status_updated
+
+#Msg No.6-3
+[Node status determined]
+pattern=pengine,determine_online_status,Node,is
+func=node_status_determined
 
 ###
 # For Interconnect-LAN status event
@@ -157,7 +163,7 @@ func=respawn_too_fast
 ##
 #MsgNo.F0-1, F9-1, F10-1
 [Detect calculation starts]
-pattern=crmd,info:,do_state_transition:,State transition,-> S_POLICY_ENGINE,!I_SHUTDOWN
+pattern=crmd,info:,do_state_transition:,State transition,S_IDLE -> S_POLICY_ENGINE,!I_SHUTDOWN
 func=detect_pe_calc
 loglevel=WARN
 
@@ -190,21 +196,15 @@ func=add_rsc_start
 #MsgNo.F11-2
 #The message is not output immediately, output when F/O is complete.
 [Add Resource stop action]
-pattern=pengine,notice:,LogActions: Stop,resource
+pattern=pengine,notice:,LogActions: Stop
 func=add_rsc_stop
 
 #MsgNo.F11-3, F11-8, F11-9
 #The message is not output immediately, output when F/O is complete.
 [Add no action]
-pattern_leave_start=pengine,notice:,LogActions: Leave,resource
-pattern_restart=pengine,notice:,LogActions: Restart,resource
+pattern_leave_start=pengine,notice:,LogActions: Leave
+pattern_restart=pengine,notice:,LogActions: Restart
 func=add_no_action
-
-#MsgNo.F11-4
-#The message is not output immediately, output when F/O is complete.
-[Resource cannot run anywhere]
-pattern=pengine,WARN:,native_color:,Resource,cannot run anywhere
-func=detect_cannot_run_anywhere
 
 #MsgNo.F11-5
 #The message is not output immediately, output when F/O is complete.
@@ -215,8 +215,14 @@ func=detect_rsc_unmanaged
 #MsgNo.F11-6
 #The message is not output immediately, output when F/O is complete.
 [Add Resource move action]
-pattern=pengine,notice:,LogActions: Move,resource
+pattern=pengine,notice:,LogActions: Move
 func=add_rsc_move
+
+#Msg No.F11-10
+#The message is not output immediately, output when F/O is complete.
+[Resource initiating action]
+pattern=crmd,info:,te_rsc_command:,Initiating action,!probe_complete
+func=rsc_init_action
 
 ###
 # For DC election.
@@ -317,6 +323,11 @@ func=detect_attr_updated
 [Detect attribute deleted]
 pattern=attrd,info:,attrd_perform_update:,Sent delete,!delete -,!fail-count-,!last-failure-,!probe_complete,!shutdown,!master-
 func=detect_attr_deleted
+
+#Msg No.22-3
+[Detect cib updated]
+pattern=crmd,info:,abort_transition_graph:,tag=nvpair,Transient attribute: update
+func=detect_cib_updated
 
 ###
 # For Heartbeat service starts.
