inhibit ERROR message when using migration-threshold > 1

--- a/pm_logconv.conf
+++ b/pm_logconv.conf
@@ -199,10 +199,11 @@ func=add_rsc_start
 pattern=pengine,notice:,LogActions: Stop
 func=add_rsc_stop
 
-#MsgNo.F11-3, F11-8, F11-9
+#MsgNo.F11-3, F11-4, F11-8, F11-9
 #The message is not output immediately, output when F/O is complete.
 [Add no action]
 pattern_leave_start=pengine,notice:,LogActions: Leave
+pattern_recover=pengine,notice:,LogActions: Recover
 pattern_restart=pengine,notice:,LogActions: Restart
 func=add_no_action
 
